<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background_dialog">

    <TextView
        android:id="@+id/header_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/caesardressingregular"
        android:text="@string/app_login"
        android:textColor="@color/app_yellow"
        android:textSize="44sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_close_view"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="35dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/ic_shape"
        android:fontFamily="@font/aqua"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/header_layer_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/sfprodisplayregular"
        android:text="@string/app_login_content"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_title" />


    <EditText
        android:id="@+id/user_phone_number"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/oval_shape_white"
        android:fontFamily="@font/aqua"
        android:hint="phone number"
        android:text=""
        android:textColorHint="@color/black"
        android:textColor="@color/white"
        android:paddingLeft="25dp"
        android:textColorHighlight="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/header_layer_content"
        app:layout_constraintStart_toStartOf="@+id/header_layer_content"
        app:layout_constraintTop_toBottomOf="@+id/header_layer_content" />

    <EditText
        android:id="@+id/otp_number"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/oval_shape_white"
        android:fontFamily="@font/aqua"
        android:hint="Enter Otp"
        android:paddingLeft="25dp"
        android:text=""
        android:textColor="@color/white"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/header_layer_content"
        app:layout_constraintStart_toStartOf="@+id/header_layer_content"
        app:layout_constraintTop_toBottomOf="@+id/user_phone_number" />

    <TextView
        android:id="@+id/login_view"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"
        android:padding="5dp"
        android:textAllCaps="false"
        style="@style/AppTheme.RoundedCornerMaterialButton"
        android:fontFamily="@font/aqua"
        app:layout_constraintEnd_toEndOf="@+id/header_layer_content"
        app:layout_constraintStart_toStartOf="@+id/header_layer_content"
        app:layout_constraintTop_toBottomOf="@+id/otp_number"
        android:text="@string/getstart"/>

</androidx.constraintlayout.widget.ConstraintLayout>