<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background_dialog">

    <TextView
        android:id="@+id/header_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/aqua"
        android:text="@string/app_lane"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/set_package_view"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="35dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/oval_shape_yellow"
        android:fontFamily="@font/aqua"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="@string/set_package"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/close_view"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/close_view"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="35dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/ic_shape"
        android:fontFamily="@font/aqua"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line_view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="30dp"
        android:background="@color/app_line_color"
        app:layout_constraintTop_toBottomOf="@+id/header_title" />

    <TextView
        android:id="@+id/header_players"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/aqua"
        android:text="@string/app_select_players"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_view" />

    <Button
        android:id="@+id/btn_one"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="@+id/header_players"
        android:background="@drawable/custom_button_bg"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="1"
        android:textColor="@color/white"
        android:fontFamily="@font/sfprodisplayregular"
        app:layout_constraintTop_toBottomOf="@+id/header_players" />

    <Button
        android:id="@+id/btn_two"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintStart_toEndOf="@+id/btn_one"
        android:background="@drawable/custom_button_bg"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="2"
        android:textColor="@color/white"
        android:fontFamily="@font/sfprodisplayregular"
        app:layout_constraintTop_toBottomOf="@+id/header_players" />

    <Button
        android:id="@+id/btn_three"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintStart_toEndOf="@+id/btn_two"
        android:background="@drawable/custom_button_bg"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="3"
        android:textColor="@color/white"
        android:fontFamily="@font/sfprodisplayregular"
        app:layout_constraintTop_toBottomOf="@+id/header_players" />

    <Button
        android:id="@+id/btn_four"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintStart_toEndOf="@+id/btn_three"
        android:background="@drawable/custom_button_bg"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="4"
        android:textColor="@color/white"
        android:fontFamily="@font/sfprodisplayregular"
        app:layout_constraintTop_toBottomOf="@+id/header_players" />

    <Button
        android:id="@+id/btn_five"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintStart_toEndOf="@+id/btn_four"
        android:background="@drawable/custom_button_bg"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="5"
        android:textColor="@color/white"
        android:fontFamily="@font/sfprodisplayregular"
        app:layout_constraintTop_toBottomOf="@+id/header_players" />

    <Button
        android:id="@+id/btn_six"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintStart_toEndOf="@+id/btn_five"
        android:background="@drawable/custom_button_bg"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="6"
        android:textColor="@color/white"
        android:fontFamily="@font/sfprodisplayregular"
        app:layout_constraintTop_toBottomOf="@+id/header_players" />

    <Button
        android:id="@+id/btn_seven"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintStart_toEndOf="@+id/btn_six"
        android:background="@drawable/custom_button_bg"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="7"
        android:textColor="@color/white"
        android:fontFamily="@font/sfprodisplayregular"
        app:layout_constraintTop_toBottomOf="@+id/header_players" />

    <Button
        android:id="@+id/btn_eight"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintStart_toEndOf="@+id/btn_seven"
        android:background="@drawable/custom_button_bg"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="8"
        android:textColor="@color/white"
        android:fontFamily="@font/sfprodisplayregular"
        app:layout_constraintTop_toBottomOf="@+id/header_players" />

</androidx.constraintlayout.widget.ConstraintLayout>